ADD_LIBRARY(_problem SHARED problem.cpp)
PYTHON_CPPMODULE(_problem)
INSTALL(FILES __init__.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _spheres.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _spheres_q.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _pl2pl.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _base_class.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
