ADD_LIBRARY(_problem SHARED problem.cpp)
PYTHON_CPPMODULE(_problem)
INSTALL(FILES __init__.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _mit_spheres.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _pl2pl.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _base.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _base_stochastic.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _example.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _gtop.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
