ADD_LIBRARY(_problem SHARED problem.cpp)
PYTHON_CPPMODULE(_problem)

ADD_LIBRARY(_problem_meta SHARED problem_meta.cpp)
PYTHON_CPPMODULE_ADDITION(_problem_meta problem)

IF(ENABLE_GTOP_DATABASE)
	ADD_LIBRARY(_problem_space SHARED problem_space.cpp)
	PYTHON_CPPMODULE_ADDITION(_problem_space problem)
ENDIF(ENABLE_GTOP_DATABASE)


INSTALL(FILES __init__.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _mit_spheres.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _pl2pl.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _base.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _base_stochastic.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _example.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _example_stochastic.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _gtop.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _mo.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
INSTALL(FILES _tsp.py DESTINATION ${PYGMO_INSTALL_PATH}/problem)
