ADD_LIBRARY(_algorithm SHARED algorithm.cpp)
PYTHON_CPPMODULE(_algorithm)
INSTALL(FILES __init__.py DESTINATION ${PYGMO_INSTALL_PATH}/algorithm)
INSTALL(FILES _example.py DESTINATION ${PYGMO_INSTALL_PATH}/algorithm)
INSTALL(FILES _base.py DESTINATION ${PYGMO_INSTALL_PATH}/algorithm)
INSTALL(FILES _cross_entropy.py DESTINATION ${PYGMO_INSTALL_PATH}/algorithm)
INSTALL(FILES _cmaes.py DESTINATION ${PYGMO_INSTALL_PATH}/algorithm)
INSTALL(FILES _scipy_algos.py DESTINATION ${PYGMO_INSTALL_PATH}/algorithm)
